--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.1"
+config = "0.15.8"
 once_cell = "1.20.3"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
